@@ -133,6 +133,24 @@ USA
 
    </div>
 
+   <h2 class=sidebarlink><a name=new>New</a></h2>
+
+   <div class=helpsection>
+
+    <p>This screen displays tracks recently added to the database,
+    most recent first.  The <img class=button
+    src="@label:images.edit@" title="@label:choose.prefs@"
+    alt="@label:choose.prefs@"> button can be used to edit the details
+    for a track; see <a href="#prefs">Editing Preferences</a> below,
+    and clicking on the track title will add it to the queue.</p>
+
+    <p>The time tracks are remembered for is controlled by the server
+    configuration.  See the "noticed_history" option in <a
+    href="@url@?action=disorder_config.5">disorder_config(5)</a> for
+    more details.</p>
+
+   </div>
+
    <h2 class=sidebarlink><a name=choose>Choose</a></h2>
 
    <div class=helpsection>
