@@ -1,0 +1,70 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN">
+<!--
+This file is part of DisOrder.
+Copyright (C) 2004, 2005, 2007 Richard Kettlewell
+
+This program is free software; you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation; either version 2 of the License, or
+(at your option) any later version.
+
+This program is distributed in the hope that it will be useful, but
+WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program; if not, write to the Free Software
+Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307
+USA
+-->
+<html>
+ <head>
+@include:stdhead@
+  <title>@label:new.title@</title>
+ </head>
+ <body>
+@include{@label{menu}@}@
+  <h1 class=title>@label:new.title@</h1>
+
+@#{only display the table if there is something to put in it}@
+@if{@isnew@}{
+  <table class=new>
+    <tr class=headings>
+     <th class=artist>@label:heading.artist@</th>
+     <th class=album>@label:heading.album@</th>
+     <th class=title>@label:heading.title@</th>
+     <th class=length>@label:heading.length@</th>
+      <th class=button>&nbsp;</th>
+    </tr>
+    @new{
+    <tr class=@parity@>
+     <td class=artist><a class=directory href="@url@?action=choose&amp;directory=@urlquote{@dirname{@dirname{@part:path@}@}@}@">@part:artist@</a></td>
+     <td class=album><a class=directory href="@url@?action=choose&amp;directory=@urlquote{@dirname{@part:path@}@}@">@part:album@</a></td>
+     <td class=title><a
+      class=file
+      href="@url@?action=play&#38;file=@urlquote{@file@}@&#38;back=@urlquote{@thisurl@}@&#38;nonce=@nonce@"
+      title="@label:choose.play@">@part:title@</a></td>
+     <td class=length>@length@</td>
+     <td class=imgbutton><a class=imgbutton
+      href="@url@?action=prefs&#38;nonce=@nonce@&#38;0_file=@urlquote{@file@}@"><img
+       class=button src="@label:images.edit@"
+       title="@label:choose.prefsverbose@"
+       alt="@label:choose.prefs@"></a></td>
+    </tr>
+    }@
+  </table>
+}@
+
+@include{@label{menu}@end}@
+ </body>
+</html>
+@@
+<!--
+Local variables:
+mode:sgml
+sgml-always-quote-attributes:nil
+sgml-indent-step:1
+sgml-indent-data:t
+End:
+-->
