@@ -6,6 +6,9 @@
   <a class=sidebarlink href="@url@?action=recent&amp;nonce=@nonce@">@label:sidebar.recent@</a>
  </p>
  <p class=sidebarlink>
+  <a class=sidebarlink href="@url@?action=new&amp;nonce=@nonce@">@label:sidebar.new@</a>
+ </p>
+ <p class=sidebarlink>
   <a class=sidebarlink href="@url@?action=@label:sidebar.choosewhich@&amp;nonce=@nonce@">@label:sidebar.choose@</a>
  </p>
  <p class=sidebarlink>
@@ -28,7 +31,7 @@
 @@
 <!--
 This file is part of DisOrder.
-Copyright (C) 2004, 2005 Richard Kettlewell
+Copyright (C) 2004, 2005, 2007 Richard Kettlewell
 
 This program is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
