@@ -5,6 +5,9 @@
   <a class=@if{@eq{@action@}{recent}@}{activemenu}{inactivemenu}@
  href="@url@?action=recent&amp;nonce=@nonce@"
  title="@label:sidebar.recentverbose@">@label:sidebar.recent@</a>
+  <a class=@if{@eq{@action@}{new}@}{activemenu}{inactivemenu}@
+ href="@url@?action=new&amp;nonce=@nonce@"
+ title="@label:sidebar.newverbose@">@label:sidebar.new@</a>
   <a class=@if{@or{@eq{@action@}{choose}@}
                   {@eq{@action@}{choosealpha}@}@}
               {activemenu}
@@ -33,7 +36,7 @@
 @@
 <!--
 This file is part of DisOrder.
-Copyright (C) 2005 Richard Kettlewell
+Copyright (C) 2005, 2007 Richard Kettlewell
 
 This program is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
